feat: read status complaint
